fixed issue with image overlapping on main screen

--- a/client/src/pages/css/HomePage.css
+++ b/client/src/pages/css/HomePage.css
@@ -118,7 +118,7 @@
 }
 
 .charityLink {
-    color: #0060B6;
+    color: #003d72;
     text-decoration: none;
 }
 
